03/01/2018_Added both Menu and Setting Activities completed without an error, but didn't test yet.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".A7"
+            android:label="A7"
+            android:parentActivityName=".A6_AddingSeekBar" />
+        <activity
+            android:name=".A8"
+            android:label="A8"
+            android:parentActivityName=".A6_AddingSeekBar"></activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
     </application>
 
 </manifest>
